# pythia-oracle-mcp

./: .gitignore  LICENSE  PUBLISH.md  README.md  glama.json  pyproject.toml  server.json
src/pythia_oracle_mcp/: __init__.py  __main__.py  server.py
